--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first page</title>
+
+    <style>
+        h1{
+            color: yellow;
+        }
+
+        body{
+            background-color: lightblue;
+        }
+    </style>
 </head>
 <body>
     <header>
