--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         body{
             background-color: lightblue;
         }
+        p{
+            color: red;
+        }
     </style>
 </head>
 <body>
