--- a/other-pages/contact.html
+++ b/other-pages/contact.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+
+    <style>
+        body {
+            font-family: Arial;
+            background-color: rgb(240, 248, 255);
+        }
+
+        header {
+            background-color: rgb(70, 130, 180);
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        main {
+            text-align: center;
+            background-color: rgb(176, 224, 230);
+        }
+
+        footer {
+            background-color: rgb(70, 130, 180);
+            color: #fff;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -13,7 +38,7 @@
         <p>This is the contact page.</p>
     </main>
     <footer>
-        
+        <h2>Footer</h2>
     </footer>
 </body>
 </html>
